--- a/packages/daemon/package.json
+++ b/packages/daemon/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
@@ -12,5 +12,8 @@
     "hbs": "^4.1.1",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
