--- a/packages/daemon/package.json
+++ b/packages/daemon/package.json
@@ -6,9 +6,12 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@azure/msal-node": "^1.0.0-beta.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "hbs": "^4.1.1",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0"
