--- a/packages/daemon/package.json
+++ b/packages/daemon/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@azure/msal-node": "^1.0.0-beta.2",
+    "@microsoft/microsoft-graph-client": "^2.2.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
@@ -16,6 +17,7 @@
     "express-session": "^1.17.1",
     "hbs": "^4.1.1",
     "http-errors": "^1.8.0",
+    "isomorphic-fetch": "^3.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
