--- a/packages/daemon/.env.sample
+++ b/packages/daemon/.env.sample
@@ -1,5 +1,7 @@
 OAUTH_APP_ID=...
 OAUTH_APP_SECRET=...
-OAUTH_REDIRECT_URI=http://localhost:4000/auth/callback
-OAUTH_SCOPES='user.read,mailboxsettings.readwrite'
-OAUTH_AUTHORITY=https://login.microsoftonline.com/common/
+OAUTH_AUTHORITY=https://login.microsoftonline.com/organizations
+OAUTH_REDIRECT_URI=http://localhost:4000/account/callback
+OAUTH_ADMINCONSENT_REDIRECT_URI=http://localhost:4000/account/grantpermissions
+OAUTH_APP_REDIRECT_URI=http://localhost:4000
+OAUTH_SCOPES='openid,profile,email,User.Read'
